fix more FindBugs issues